--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous" />
     <link rel="stylesheet" href="countdown/simplyCountdown.theme.default.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <title>Undangan Pernikahan</title>
   </head>
   <body>
@@ -27,6 +28,91 @@
         <div class="simply-countdown"></div>
         <a href="#undangan" class="btn btn-lg mt-4 rounded-5 shadow-lg accordion">Lihat Undangan</a>
       </main>
+    </section>
+    <nav class="navbar navbar-expand-lg bg-transparent sticky-top mynavbar" id="undangan">
+      <div class="container">
+        <a class="navbar-brand" href="#">Wedding</a>
+        <button
+          class="navbar-toggler border-0 text-black"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title accordion" id="offcanvasNavbarLabel">Wedding</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <div class="navbar-nav ms-auto">
+              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="#info">Info</a>
+              <a class="nav-link" href="#story">Story</a>
+              <a class="nav-link" href="#Gallery">Gallery</a>
+              <a class="nav-link" href="#rsvp">RSVP</a>
+              <a class="nav-link" href="#gift">Gift</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <section id="home" class="home">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center desc">
+            <h2>Acara Pernikahan</h2>
+            <h3>Diselenggarakan pada 10 Agustus 2023 di Semarang, Jawa Tengah.</h3>
+            <p>
+              Oleh karena itu, dengan hormat kami bermaksud untuk mengundang Bapak/Ibu/Saudara/i, untuk hadir pada acara
+              pernikahan kami.
+            </p>
+          </div>
+        </div>
+        <div class="row couple">
+          <div class="col-lg-6">
+            <div class="row mx-2">
+              <div class="col-8 text-end">
+                <h3>Muhammad Anas Mubarok</h3>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo voluptatibus omnis velit quia, earum
+                  aspernatur!
+                </p>
+                <p>
+                  Putra dari Bpk. Lorem<br />
+                  dan <br />
+                  Ibu Ipsum
+                </p>
+              </div>
+              <div class="col-4">
+                <img src="./img/anas.jpg" alt="anas" class="img-responsive rounded-circle" />
+              </div>
+            </div>
+          </div>
+          <span class="heart"><i class="bi bi-suit-heart-fill"></i></span>
+          <div class="col-lg-6">
+            <div class="row mx-2">
+              <div class="col-4">
+                <img src="./img/leka.jpg" alt="valezka" class="img-responsive rounded-circle" />
+              </div>
+              <div class="col-8">
+                <h3>Juanita Zelia Valezka Tanjung</h3>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo voluptatibus omnis velit quia, earum
+                  aspernatur!
+                </p>
+                <p>
+                  Putra dari Bpk. Lorem<br />
+                  dan <br />
+                  Ibu Ipsum
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
