--- a/index.html
+++ b/index.html
@@ -114,6 +114,61 @@
         </div>
       </div>
     </section>
+    <section id="info" class="info">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <h2>Informasi Acara</h2>
+            <p class="alamat">
+              Alamat : Grand Admiral Ballroom <br />Jl. Ki Mangunsarkoro No.38, Karangkidul, Kec. Semarang Tengah,<br />Kota
+              Semarang, Jawa Tengah.
+            </p>
+            <p>
+              Untuk peta/Google Maps
+              <a
+                class="btn btn-light btn-sm fs-5 rounded-5 px-3 my-3 text-primary klik-maps"
+                href="https://goo.gl/maps/L88ERT58CfhYwbND6"
+                >Klik disini</a
+              >
+            </p>
+            <p class="deskripsi">
+              Diharapkan untuk tidak salah alamat dan tanggal. Jika tiba di tujuan namun tidak ada tanda-tanda sedang
+              dilangsungkan pernikahan, bisa jadi Anda salah jadwal, atau salah tempat.
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center mt-4">
+          <div class="col-md-5 col-10">
+            <div class="card text-center text-bg-light my-3">
+              <div class="card-header">Akad Nikah</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6"><i class="bi bi-clock d-block"></i><span>08.00 - 10.00 WIB</span></div>
+                  <div class="col-md-6"><i class="bi bi-calendar4-week d-block"></i><span>Kamis, 10 Agustus 2023</span></div>
+                </div>
+              </div>
+              <div class="card-footer">
+                Saat acara diharapkan untuk kondusif, menjaga kekhidmatan dan kekhusyukan prosesi akad.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5 col-10">
+            <div class="card text-center text-bg-light my-3">
+              <div class="card-header">Resepsi</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6"><i class="bi bi-clock d-block"></i><span>11.00 WIB - Selesai</span></div>
+                  <div class="col-md-6"><i class="bi bi-calendar4-week d-block"></i><span>Kamis, 10 Agustus 2023</span></div>
+                </div>
+              </div>
+              <div class="card-footer">
+                Saat acara diharapkan untuk kondusif, menjaga kekhidmatan dan kekhusyukan prosesi akad.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
