--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <section id="info" class="info">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-8 col-10 text-center">
+          <div class="col-md-8 col-10 text-center mt-5">
             <h2>Informasi Acara</h2>
             <p class="alamat">
               Alamat : Grand Admiral Ballroom <br />Jl. Ki Mangunsarkoro No.38, Karangkidul, Kec. Semarang Tengah,<br />Kota
