--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
               Untuk peta/Google Maps
               <a
                 class="btn btn-light btn-sm fs-5 rounded-5 px-3 my-3 text-primary klik-maps"
+                target="_blank"
                 href="https://goo.gl/maps/L88ERT58CfhYwbND6"
                 >Klik disini</a
               >
